JastAddExtensions/NonNullChecker/test/Test06.result
Errors:
test/Test06.java:25:
  Semantic Error: can not assign n of type java.lang.String- a value of type java.lang.String
